--- a/python_environment.yml
+++ b/python_environment.yml
@@ -2,6 +2,7 @@ dependencies:
   - scipy==1.7.3
   - numpy==1.21.5
   - pip==20.2.4
+  - python==3.7.9
   - pip:
       # environment dependencies
       - aenum==3.1.5
