--- a/.gitignore
+++ b/.gitignore
@@ -162,4 +162,5 @@ data/highD/pickles/problem/*
 # plot
 interface/plot_results/HCWithPos-v0
 interface/plot_results/highD_velocity_constraint
+interface/plot_results/highD_distance_constraint
 interface/plot_results/highD_velocity_distance_constraint
